<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title_text_layout2"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/txHipotenusaLayout2"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/pifagor" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="#BC6C25"
        android:visibility="gone"
        app:hintTextColor="@color/tx_hint"
        app:layout_constraintEnd_toEndOf="@+id/txHipotenusaLayout2"
        app:layout_constraintStart_toStartOf="@+id/txHipotenusaLayout2"
        app:layout_constraintTop_toBottomOf="@+id/txHipotenusaLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txHipotenuzaLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hipotenusa_layout2"
            android:inputType="number"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="#BC6C25"
        android:visibility="visible"
        app:hintTextColor="@color/tx_hint"
        app:layout_constraintEnd_toEndOf="@+id/txHipotenusaLayout2"
        app:layout_constraintStart_toStartOf="@+id/txHipotenusaLayout2"
        app:layout_constraintTop_toBottomOf="@+id/txHipotenusaLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txKatet1Layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_katet1_layout2"
            android:inputType="number"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textColorHint="#BC6C25"
        android:visibility="visible"
        app:hintTextColor="@color/tx_hint"
        app:layout_constraintEnd_toEndOf="@+id/txHipotenusaLayout2"
        app:layout_constraintStart_toStartOf="@+id/txHipotenusaLayout2"
        app:layout_constraintTop_toBottomOf="@+id/txHipotenusaLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txKatet2Layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_katet2_layout2"
            android:inputType="number"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bt_result"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>